<resources>
    <string name="app_name">CumucoreEmbms</string>
    <string name="ButtonStartSampleCode">start</string>
    <string name="ButtonExitSampleCode">exit</string>
    <string name="title_section9">AT Commands Test engine</string>
    <string name="title_section8">Stop MSP</string>
    <string name="title_section7">Metadata</string>
    <string name="title_section6">Downloaded Files</string>
    <string name="title_section5">File Download</string>
    <string name="title_section4">HLS</string>
    <string name="title_section3">RTP streaming</string>
    <string name="title_section2">Mission Critical</string>
    <string name="title_section1">Dash</string>
    <string name="menu_settings">Settings</string>
    <string name="ButtonLoad">Load Bootstrap</string>
    <string name="ButtonStartAN">Start Announcement</string>
    <string name="ButtonStopAN">Stop Announcement</string>
    <string name="ButtonServices">Available Services</string>
    <string name="pref_cat_msp">MSP server</string>
    <string name="pref_cat_live">DASH Live</string>
    <string name="pref_cat_streaming">RTP Streaming</string>
    <string name="pref_cat_debug">Debug</string>
    <string name="pref_cat_misc">Misc.</string>
    <string name="pref_cat_mcr">Multicast Receiver</string>
    <string name="pref_cat_mcr_default">233.1.1.4</string>
    <string name="pref_label_ip">Server name or address</string>
    <string name="pref_default_ip">127.0.0.1</string>
    <string name="pref_label_port">Server Port</string>
    <string name="pref_default_port">8080</string>
    <string name="ButtonCloseLive">Close Live</string>
    <string name="pref_serviceclass">Service Class (x,y,z...)</string>
    <string name="pref_default_serviceclass" />
    <string name="Button_fc_BAll">Book All</string>
    <string name="Button_fc_SpAll">Suspend All</string>
    <string name="Button_fc_CAll">Cancel All</string>
    <string name="pref_close_stream">Close streams</string>
    <string name="pref_default_close_stream">false</string>
    <string name="pref_label_msp_workdir">MSP server workdir</string>
    <string name="pref_default_msp_workdir"></string>
    <string name="ew_msp_package_name">com.expway.embmsserver</string>
    <string name="ew_msp_workdir_name">EweMBMSServerWorkdir</string>
    <string name="pref_with_chrono">Live chronometers</string>
    <string name="pref_default_with_chrono">false</string>
    <string name="pref_with_logo">Show Expway logo</string>
    <string name="pref_default_with_logo">false</string>


    <!-- RTP Preferences -->
    <string name="pref_rtp_debug_log">Player debug logs</string>
    <string name="pref_rtp_debug_log_default">false</string>
    <string name="pref_rtp_sdp_url">SDPs List URL</string>
    <string name="pref_rtp_sdp_url_default">http://192.168.3.1/sdpList.txt</string>
    <string name="pref_rtp_decoding_type">Enable hardware decoder</string>
    <string name="pref_rtp_decoding_type_default">true</string>
    <string name="pref_rtp_decoder_latency">Buffer for low latency frames</string>
    <string name="pref_rtp_decoder_latency_default">false</string>
    <string name="pref_rtp_synchro">Synchronize audio and video</string>
    <string name="pref_rtp_synchro_default">true</string>
    <string name="pref_rtp_drop">Drop late video frames</string>
    <string name="pref_rtp_drop_default">false</string>
    <string name="pref_rtp_detection_time">Detection time (ms)</string>
    <string name="pref_rtp_detection_time_default">5000</string>
    <string name="pref_rtp_bufferize_by_size">Bufferize by size (else by time)</string>
    <string name="pref_rtp_bufferize_by_size_default">false</string>
    <string name="pref_rtp_buffer_size">Buffer size (bytes)</string>
    <string name="pref_rtp_buffer_size_default">0</string>
    <string name="pref_rtp_buffer_time">Buffer time (ms)</string>
    <string name="pref_rtp_buffer_time_default">1000</string>
    <string name="pref_rtp_volume_boost">Volume boost (dB)</string>
    <string name="pref_rtp_volume_boost_default">0</string>
    <string name="pref_rtp_data_rcv_timeout">Reception timeout (ms)</string>
    <string name="pref_rtp_data_rcv_timeout_default">60000</string>
    <string name="pref_rtp_connection_timeout">Connection timeout (ms)</string>
    <string name="pref_rtp_connection_timeout_default">60000</string>

    <string name="pref_label_delay_open">Delay open</string>
    <string name="pref_default_delay_open">0</string>
    <string name="pref_cat_reg">Registration</string>
    <string name="pref_label_asp">Authentification server</string>
    <string name="pref_default_asp"></string>
    <string name="pref_label_signature">Signature</string>
    <string name="pref_default_signature"></string>
    <string name="pref_serviceclasslist">Service Class list</string>
    <string name="pref_defaultserviceclasslist">Default Service Class list</string>
    <string-array name="empty_array" />
    <string name="description">Media Controls</string>
    <string name="expway_logo">"EXPWAY Logo"</string>
    <string name="chrno_overall">"overall time: "</string>
    <string name="chrno_mpd_ready_at">"MPD ready at: "</string>
    <string name="chrno_playback_creation_at">"Playback creation at: "</string>
    <string name="chrno_zapping_time">"Zapping time: "</string>
    <string name="pref_dashplayerselection">"DASH Player"</string>
    <string name="pref_cat_test">Engine Tests</string>
    <string name="pref_ATCMD_test">AT Commands Engine Test</string>
    <string name="pref_default_ATCMD_test">false</string>
    <string name="pref_label_ATCMD_param">Param</string>
    <string name="pref_default_ATCMD_param"></string>
    <string name="pref_label_ATCMD_version">ATCMD Version</string>
    <string name="pref_default_ATCMD_version">1</string>
    <string name="action_settings">Define Multicast IP Address</string>
    <string name="init_text"></string>
    <string name="dashplayer_expway">Expway</string>
    <string name="dashplayer_nuplayer">NuPlayer</string>
    <string name="dashplayer_exoplayer">Exoplayer</string>
    <string-array name="dashplayer_array_entries">
        <item>@string/dashplayer_expway</item>
        <item>@string/dashplayer_nuplayer</item>
        <item>@string/dashplayer_exoplayer</item>
    </string-array>
    <string name="pref_default_Streaming_text_SDP">"SDP"</string>
    <string name="pref_default_Streaming_text_TMGI">"TMGI"</string>
    <string name="pref_Streaming_switch_button_text">"RTP Streaming"</string>
    <string name="pref_Streaming_bypass_fec_frame_text">Bypass FEC Frame</string>
    <string name="title_activity_mcr_manager">McrManager</string>
    <string name="conf_title">MSP Network Interface settings</string>
    <string name="conf_label_port">MSP Port</string>
    <string name="conf_label_address">MSP IP address</string>
    <string name="port_forward">Port forward</string>
    <string name="ip_forward">IP forward</string>
    <string name="multi_cast_socket">multicast socket</string>
    <string name="port_foward_key">port_forward_key</string>
    <string name="ip_forward_key">ip_forward_key</string>
    <string name="multi_cast_socket_one_key">multi_cast_socket_one_key</string>
    <string name="multi_cast_socket_two_key">multi_cast_socket_two_key</string>
    <string name="local_configration">Local Configration</string>
</resources>
