<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:key="pref_local_conf"
        android:title="@string/local_configration">

        <EditTextPreference
        android:key="@string/ip_forward_key"
        android:title="@string/ip_forward"
        android:inputType="phone"/>

        <EditTextPreference
            android:key="@string/port_foward_key"
            android:title="@string/port_forward"
            android:inputType="phone"/>



        <EditTextPreference
            android:key="@string/multi_cast_socket_one_key"
            android:title="@string/multi_cast_socket"
            android:inputType="phone"/>

        <EditTextPreference
        android:key="@string/multi_cast_socket_two_key"
        android:title="@string/multi_cast_socket"
        android:inputType="phone"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_cat_msp"
        android:title="@string/pref_cat_msp">
        <EditTextPreference
            android:defaultValue="@string/pref_default_ip"
            android:key="pref_key_ip"
            android:title="@string/pref_label_ip"
            android:inputType="phone">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_default_port"
            android:key="pref_key_port"
            android:title="@string/pref_label_port"
            android:inputType="number">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_default_msp_workdir"
            android:key="pref_key_msp_workdir"
            android:title="@string/pref_label_msp_workdir">
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_cat_reg"
        android:title="@string/pref_cat_reg">
        <EditTextPreference
            android:defaultValue="@string/pref_default_asp"
            android:key="pref_key_asp"
            android:title="@string/pref_label_asp">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_default_signature"
            android:key="pref_key_signature"
            android:title="@string/pref_label_signature">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_default_serviceclass"
            android:key="pref_serviceclass"
            android:title="@string/pref_serviceclass">
        </EditTextPreference>
        <MultiSelectListPreference
            android:entries="@array/empty_array"
            android:entryValues="@array/empty_array"
            android:defaultValue="@array/empty_array"
            android:key="pref_serviceclasslist"
            android:title="@string/pref_serviceclasslist" >
        </MultiSelectListPreference>
        <Preference
            android:key="pref_defaultserviceclasslist"
            android:title="@string/pref_defaultserviceclasslist"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_cat_live"
        android:title="@string/pref_cat_live">
        <SwitchPreference
            android:defaultValue="@string/pref_default_close_stream"
            android:key="pref_close_stream"
            android:title="@string/pref_close_stream">
        </SwitchPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_default_delay_open"
            android:key="pref_delay_open"
            android:title="@string/pref_label_delay_open"
            android:inputType="number">
        </EditTextPreference>
        <ListPreference
            android:key="pref_key_dashplayerselection"
            android:title="@string/pref_dashplayerselection"
            android:entryValues="@array/dashplayer_array_entries"
            android:entries="@array/dashplayer_array_entries"
            android:defaultValue="@string/dashplayer_expway" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_streaming">
        <EditTextPreference
            android:title="@string/pref_rtp_sdp_url"
            android:defaultValue="@string/pref_rtp_sdp_url_default"
            android:key="pref_key_sdp_url" />
        <SwitchPreference
            android:title="@string/pref_rtp_debug_log"
            android:defaultValue="pref_rtp_debug_log_default"
            android:key="pref_rtp_debug_log"/>
        <SwitchPreference
            android:title="@string/pref_rtp_decoding_type"
            android:defaultValue="@string/pref_rtp_decoding_type_default"
            android:key="pref_rtp_decoding_type"/>
        <SwitchPreference
            android:title="@string/pref_rtp_decoder_latency"
            android:defaultValue="@string/pref_rtp_decoder_latency_default"
            android:key="pref_rtp_decoder_latency"/>
        <SwitchPreference
            android:title="@string/pref_rtp_synchro"
            android:defaultValue="@string/pref_rtp_synchro_default"
            android:key="pref_rtp_synchro"/>
        <SwitchPreference
            android:title="@string/pref_rtp_drop"
            android:defaultValue="@string/pref_rtp_drop_default"
            android:key="pref_rtp_drop"/>
        <EditTextPreference
            android:title="@string/pref_rtp_detection_time"
            android:defaultValue="@string/pref_rtp_detection_time_default"
            android:key="pref_rtp_detection_time"/>
        <SwitchPreference
            android:title="@string/pref_rtp_bufferize_by_size"
            android:defaultValue="@string/pref_rtp_bufferize_by_size_default"
            android:key="pref_rtp_bufferize_by_size"/>
        <EditTextPreference
            android:title="@string/pref_rtp_buffer_size"
            android:defaultValue="@string/pref_rtp_buffer_size_default"
            android:key="pref_rtp_buffer_size"/>
        <EditTextPreference
            android:title="@string/pref_rtp_buffer_time"
            android:defaultValue="@string/pref_rtp_buffer_time_default"
            android:key="pref_rtp_buffer_time"/>
        <EditTextPreference
            android:title="@string/pref_rtp_volume_boost"
            android:defaultValue="@string/pref_rtp_volume_boost_default"
            android:key="pref_rtp_volume_boost"/>
        <EditTextPreference
            android:title="@string/pref_rtp_data_rcv_timeout"
            android:defaultValue="@string/pref_rtp_data_rcv_timeout_default"
            android:key="pref_rtp_data_rcv_timeout"/>
        <EditTextPreference
            android:title="@string/pref_rtp_connection_timeout"
            android:defaultValue="@string/pref_rtp_connection_timeout_default"
            android:key="pref_rtp_connection_timeout"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_cat_misc"
        android:title="@string/pref_cat_misc">
        <SwitchPreference
            android:defaultValue="@string/pref_default_with_logo"
            android:key="pref_with_logo"
            android:title="@string/pref_with_logo">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_cat_debug"
        android:title="@string/pref_cat_debug">
        <SwitchPreference
            android:defaultValue="@string/pref_default_with_chrono"
            android:key="pref_with_chrono"
            android:title="@string/pref_with_chrono">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_cat_test"
        android:title="@string/pref_cat_test">
        <SwitchPreference
            android:defaultValue="@string/pref_default_ATCMD_test"
            android:key="pref_active_ATCMD_test"
            android:title="@string/pref_ATCMD_test">
        </SwitchPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_default_ATCMD_param"
            android:key="pref_key_ATCMD_param"
            android:title="@string/pref_label_ATCMD_param">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_default_ATCMD_version"
            android:key="pref_key_ATCMD_version"
            android:title="@string/pref_label_ATCMD_version">
        </EditTextPreference>
    </PreferenceCategory>

</PreferenceScreen>